--- a/app/src/main/res/layout/form_card_fragment.xml
+++ b/app/src/main/res/layout/form_card_fragment.xml
@@ -170,7 +170,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:enabled="false"
-                android:inputType="textPassword" />
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
