--- a/app/src/main/res/drawable/background_rounded_tops.xml
+++ b/app/src/main/res/drawable/background_rounded_tops.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:topLeftRadius="40dp"
         android:topRightRadius="40dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="?android:attr/colorBackground"/>
 
 </shape>
