--- a/app/src/main/res/layout/bottom_sheet_category.xml
+++ b/app/src/main/res/layout/bottom_sheet_category.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayoutCategories"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="20dp"
     android:background="@drawable/bottom_sheet_background">
 
     <TextView
