--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -57,7 +57,7 @@
                 android:fontFamily="@font/inter"
                 android:gravity="center"
                 android:scaleType="centerCrop"
-                android:text="F"
+                tools:text="F"
                 android:textColor="@color/purple"
                 android:textFontWeight="700"
                 android:textSize="32sp"
@@ -77,23 +77,6 @@
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewHello" />
-
-            <TextView
-                android:id="@+id/firstLetter"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="9dp"
-                android:layout_marginEnd="25dp"
-                android:fontFamily="@font/inter_extrabold"
-                android:textColor="@color/white"
-                android:textFontWeight="700"
-                android:textSize="16sp"
-                android:textStyle="italic"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewAdviceOfMoment"
-                tools:text="M" />
 
             <TextView
                 android:id="@+id/textViewMessage"
@@ -132,7 +115,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="25dp"
                 android:fontFamily="@font/inter"
-                android:text="@string/the_advice_above"
+                tools:text="@string/the_advice_above"
                 android:textColor="@color/white"
                 android:textFontWeight="400"
                 android:textSize="12sp"
