--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -306,6 +306,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/TextViewViewAll"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="@string/view_all"
