feat: Chamando layout de lista de cards

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -321,7 +321,7 @@
                     />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewTypes"
+                    android:id="@+id/recyclerViewCategories"
                     android:layout_width="0dp"
                     android:layout_height="160dp"
                     android:layout_marginTop="8dp"
@@ -331,7 +331,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewTypes"
                     app:layout_constraintVertical_bias="0.0"
-                    tools:listitem="@layout/item_image_types" />
+                    tools:listitem="@layout/item_image_categories" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
