--- a/app/src/main/res/layout/item_image_categories.xml
+++ b/app/src/main/res/layout/item_image_categories.xml
@@ -3,7 +3,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardViewType"
+    android:id="@+id/cardViewCategories"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
@@ -13,6 +13,7 @@
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayoutItemCategory"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
