--- a/app/src/main/res/layout/item_list_cards.xml
+++ b/app/src/main/res/layout/item_list_cards.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listCardsItem"
     android:layout_marginStart="19dp"
-    android:layout_marginTop="25dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginBottom="12dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp">
 
