fix: make advice static in height and adjust loading for recyclerview in home

--- a/app/src/main/res/layout/create_new_card_fragment.xml
+++ b/app/src/main/res/layout/create_new_card_fragment.xml
@@ -32,7 +32,8 @@
             android:fontFamily="@font/inter_bold"
             android:text="@string/create_a_new_card"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageButtonBack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageButtonBack" />
