--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -89,6 +89,8 @@
                 android:textColor="@color/white"
                 android:textFontWeight="300"
                 android:textSize="16sp"
+                android:maxLines="4"
+                android:maxLength="180"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +182,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="9dp"
-                    android:layout_marginEnd="9dp"
+                    android:layout_marginEnd="1dp"
                     app:layout_constraintEnd_toStartOf="@id/progressBarRight"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/constraintLayoutExternal"
@@ -193,7 +195,7 @@
                     android:scaleX="-1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="9dp"
+                    android:layout_marginStart="1dp"
                     android:layout_marginEnd="9dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/progressBarLeft"
