--- a/app/src/main/res/layout/list_cards_fragment.xml
+++ b/app/src/main/res/layout/list_cards_fragment.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/purple">
 
-
     <ImageButton
         android:id="@+id/imageButtonBackAllCategories"
         android:layout_width="35dp"
@@ -35,19 +34,46 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/title_list_cards" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewListCards"
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="55dp"
         android:background="@color/white"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:spanCount="2"
-        tools:listitem="@layout/item_list_cards" />
+        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:elevation="5dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewListCards"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:spanCount="2"
+            tools:listitem="@layout/item_list_cards" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
