--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,8 +53,7 @@
             app:destination="@id/formCardFragment" />
         <action
             android:id="@+id/action_homeFragment_to_listCardsFragment"
-            app:destination="@id/listCardsFragment"
-            app:popUpTo="@id/homeFragment" />
+            app:destination="@id/listCardsFragment" />
 
     </fragment>
     <fragment
@@ -90,4 +89,9 @@
         android:name="br.com.passwordkeeper.presentation.ui.fragment.NewNoteErrorFragment"
         android:label="NewNoteErrorFragment"
         tools:layout="@layout/new_note_error" />
+    <action
+        android:id="@+id/action_navigate_to_login_fragment"
+        app:destination="@id/signInFragment"
+        app:popUpTo="@id/nav_graph"
+        app:popUpToInclusive="true" />
 </navigation>
