fix: add animation in global action to signin fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -93,5 +93,10 @@
         android:id="@+id/action_navigate_to_login_fragment"
         app:destination="@id/signInFragment"
         app:popUpTo="@id/nav_graph"
-        app:popUpToInclusive="true" />
+        app:popUpToInclusive="true"
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right"
+        />
 </navigation>
