feat: ajusta o nome do xml create new card

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -6,7 +6,7 @@
         android:menuCategory="secondary"
         android:icon="@drawable/ic_home" />
     <item
-        android:id="@+id/formCardFragment"
+        android:id="@+id/fragmentCreateNewCard"
         android:title="@string/new_card"
         android:menuCategory="secondary"
         android:icon="@drawable/ic_new_card" />
